<resources>
    <string name="app_name">TabqyDriver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Anthony Hopkins</string>
    <string name="nav_header_subtitle">anthonyhopkins@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="receivedbyrestaurant">Received by Restaurant</string>
    <string name="submittedtotabqy">Submitted to Tabqy</string>
    <string name="changepassword">Change Password</string>
    <string name="cod">COD</string>
    <string name="editaccount">Edit Account</string>
    <string name="manageaddress">Manage Address</string>
    <string name="address">Address</string>

    <string name="addAddress">Add New Address</string>
    <string name="title">Title</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>
    <string name="Add">Add</string>
    <string name="Home1">Home</string>
    <string name="Office1">Office</string>
    <string name="country">Country</string>
    <string name="editaddress">Edit address</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="earn">Earn</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="email_instructions">We just need your registered Email id to send you password Reset instructions.</string>

    ///fragment order///
    <string name="orderdetail">Order Detail</string>
    <string name="daoxiangrestaurant">Dao Xiang Restaurant</string>
    <string name="restaurant">(Restaurant)</string>
    <string name="dishname">Spring Roll</string>
    <string name="quantity">Quantity</string>
    <string name="paymentmode">Payment mode : </string>
    <string name="cash"> Cash</string>
    <string name="sulman">Sulman</string>
    <string name="customer">(Customer)</string>
    <string name="start">Start</string>
    <string name="completed">Completed</string>
    <string name="startpickup">Start Pickup</string>
    <string name="completepickup">Complete Pickup</string>
    <string name="startdelivery">Start Delivery</string>
    <string name="completedelivery">Complete Delivery</string>
    <string name="reahced">REACHED</string>
    <string name="payy">PAY</string>
    <string name="pay">Pay</string>
    <string name="deliver">NOT ABLE TO DELIVER</string>


    ///login activity///

    <string name="loginusing">LOG IN USING EMAIL</string>
    <string name="email">EMAIL</string>
    <string name="laura">Laurawilson@gmail.com</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Forgot Password ?</string>


    ///navigation view///
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_earn">Earn</string>
    <string name="title_account">Account</string>


    ///frag_home_items///
    <string name="blvd">Sheikh Mohammad bin Rashid</string>
    <string name="dubai">Dubai - United Arab Emirates</string>
    <string name="directions">Get Directions</string>
    <string name="ago">1 min ago</string>

    ///dialog///
    <string name="accept">Accept</string>


    ///fragment home///
    <string name="anthony">Anthony Hopkins</string>
    <string name="ramada">Ramada Plaza</string>
    <string name="niagra">Niagra Falls , </string>
    <string name="on">ON</string>
    <string name="emailid"><u>anthony6565@gmail.com</u></string>
    <string name="newdelivery">New Delivery</string>
    <string name="newdeliveryb"><![CDATA[<p> <b>New Delivery</b> </p>]]></string>
    <string name="nowdelivering">Now Delivering</string>
    <string name="nowdeliveringb"><![CDATA[<p> <b>Now Delivering</b> </p>]]></string>
    <string name="notdelivered">Not Delivered</string>
    <string name="notdeliveredb"><![CDATA[<p> <b>Not Delivered</b></p>]]></string>
    <string name="delivered">Delivered</string>
    <string name="deliveredb"><![CDATA[<p> <b>Delivered</b></p>]]></string>

    ///fragment order details///
    <string name="orderid">Order id</string>
    <string name="paid">Paid</string>
    <string name="sar">SAR</string>
    <string name="subtotal">Subtotal : </string>
    <string name="notabletodeliver">Not able to deliver</string>

    ///account///
    <string name="edit">Edit Profile</string>
    <string name="logged">Logged in as</string>
    <string name="jane">Anthony Hopkins</string>
    <string name="emailadd">AnthonyHopkins@gmail.com</string>
    <string name="manage2">Manage</string>
    <string name="edit2">Edit</string>
    <string name="manage">Manage Address</string>
    <string name="ground">B-91,Ground Floor,Sector-6,</string>
    <string name="noida2">Noida-201301,INDIA</string>
    <string name="setting">Setting</string>
    <string name="phone">Phone number</string>
    <string name="Email">Email address</string>
    <string name="update">Update</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>