<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ManageAddress">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/padding_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <!--<RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:layout_marginLeft="30dp"
                        android:id="@+id/addnewaddress_rad_button_home"
                        android:text="@string/Home1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/addnewaddress_rad_button_ofc"
                        android:text="@string/Office1"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>-->
                <com.tabqydriver.customtext.CustomTextView
                    android:text="@string/street"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:hint="Flat/House no./Floor/Building"
                    android:scrollbars="vertical"
                    android:id="@+id/addnewaddress_et_street"
                    android:inputType="text"
                    android:textSize="@dimen/text_14"
                    android:imeOptions="actionNext"
                    android:scrollbarStyle="insideInset"
                    android:overScrollMode="always"
                    android:background="@drawable/button_gray_hollow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.tabqydriver.customtext.CustomTextView
                    android:text="@string/landmark"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:hint="Near Noida Authority"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/text_14"
                    android:imeOptions="actionNext"
                    android:id="@+id/frag_manageaddress_et_landmark"
                    android:inputType="text"
                    android:background="@drawable/button_gray_hollow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.tabqydriver.customtext.CustomTextView
                    android:text="@string/city"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:hint="Noida"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:id="@+id/addnewaddress_et_city"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/text_14"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:background="@drawable/button_gray_hollow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.tabqydriver.customtext.CustomTextView
                    android:text="@string/state"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:hint="Uttar Pradesh"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:id="@+id/addnewaddress_et_state"
                    android:imeOptions="actionNext"
                    android:textSize="@dimen/text_14"
                    android:inputType="text"
                    android:background="@drawable/button_gray_hollow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
                <com.tabqydriver.customtext.CustomTextView
                    android:text="@string/zip"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:hint="6 digits[0-9]"
                    android:textSize="@dimen/text_14"
                    android:imeOptions="actionNext"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"

                    android:inputType="number"
                    android:id="@+id/addnewaddress_et_zip"
                    android:background="@drawable/button_gray_hollow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.tabqydriver.customtext.CustomTextView
                    android:text="@string/country"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:hint="Country"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:inputType="text"
                    android:textSize="@dimen/text_14"
                    android:imeOptions="actionDone"
                    android:id="@+id/addnewaddress_et_country"
                    android:background="@drawable/button_gray_hollow"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <com.tabqydriver.customtext.CustomTextViewBold
                    android:id="@+id/manageaddress_tv_add"
                    android:text="@string/Add"
                    android:textSize="@dimen/text_16"
                    android:textColor="@color/text_white"
                    android:paddingTop="@dimen/padding_10"
                    android:paddingBottom="@dimen/padding_10"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:gravity="center"
                    android:background="@drawable/button_pink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>